# quinbot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  app.json  app_id.txt  vcpkg-requirements.txt
scripts/: helpers.ps1  install.ps1
src/: main.cpp
src/cqsdk/: api.h  exception.h  menu.h  message.h
src/quinbot/: bot.h  command.h  command_line.h  command_manager.h  config.h  config.json  enums.h  logger.h  plugin.h  plugin_manager.h  quinbot.h  schedule.h  settings.json  task_queue.h
src/quinbot/command/: arg_map.h  arg_parser.h  builtin_command.h  command.h  command_info.h  command_line.h  command_manager.h  command_parser.h  command_processer.h  inner_spliter.h
src/quinbot/components/: image.h  record.h
src/quinbot/exceptions/: args_parse_error.h
src/quinbot/plugins/: plugin_template.h_txt  test.h
src/quinbot/plugins/ascii2d_search/: ascii2d_search.py  ascii2d_search_plugin.h
src/quinbot/plugins/dialog/: dialog_plugin - backup.h  dialog_plugin.h
src/quinbot/plugins/happy/: happy_plugin.h
src/quinbot/plugins/pixiv/: pixiv.py  pixiv_plugin.h
src/quinbot/plugins/random_illustration/: random_illustration.py  random_illustration_plugin.h
src/quinbot/plugins/repeater/: repeater_plugin.h
src/quinbot/plugins/saucenao/: saucenao_search.py
src/quinbot/plugins/timer/: timer.h
src/quinbot/plugins/welcome/: welcome_plugin.h
src/quinbot/systems/: db_system.h  file_system.h  logging_system.h
src/quinbot/utils/: cq_util.h  database.h  datetime.h  file_utils.cpp  file_utils.h  math_utils.h  python_utils.h  string_slice.h  string_utils.cpp  string_utils.h  useful.h
